--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">Chat App</string>
     <string name="insert">Insert your message</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- HomeFragment -->
+    <string name="connect">Connect to a chat</string>
+    <string name="host">Host a chat</string>
+
 </resources>
