--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="join_chat">Join Chat</string>
     <string name="username_missing">Please insert your username</string>
     <string name="ip_missing">Please provide the IP Address</string>
+    <string name="connect_error">IP Address doesn\'t have a chat server</string>
 
     <!-- FragmentServerConnect -->
     <string name="your_ip">Your IP Address is:</string>
