--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <!-- FragmentServerConnect -->
     <string name="your_ip">Your IP Address is:</string>
     <string name="create_server">Create Server</string>
+    <string name="server_error">Unexpected error, couldn\'t create server</string>
 
     <!-- FragmentChat -->
     <string name="insert_message">Insert your message…</string>
