--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="host">Host a chat</string>
 
     <!-- FragmentClientConnect -->
-    <string name="username_hint">Insert your Username</string>
-    <string name="ip_hint">IP Address 192.168.1.102</string>
+    <string name="username_hint">Username</string>
+    <string name="ip_hint">IP Address</string>
     <string name="join_chat">Join Chat</string>
     <string name="username_missing">Please insert your username</string>
     <string name="ip_missing">Please provide the IP Address</string>
