--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="your_ip">Your IP Address is:</string>
     <string name="create_and_join">Create and Join</string>
     <string name="create_server">Only create</string>
+    <string name="stop_server">Stop Server</string>
     <string name="waiting_for_a_connection">Waiting for a connection</string>
     <string name="server_error">Unexpected error, couldn\'t create server</string>
     <string name="port_in_use_error">The default port is already been hosted by other server.</string>
