--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Chat App</string>
     <string name="insert">Insert your message</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- HomeFragment -->
     <string name="connect">Connect to a chat</string>
@@ -41,8 +40,8 @@
     <!-- App Bar -->
     <string name="server_app_bar_name">Server</string>
     <string name="client_app_bar_name">Client</string>
-    <string name="chat_app_bar_name">Chat</string>
-    <string name="home_app_bar_name">Chat App</string>
+    <string name="chat_app_bar_name" translatable="false">Chat</string>
+    <string name="home_app_bar_name" translatable="false">Chat App</string>
     <string name="tic_tac_toe">Tic Tac Toe</string>
 
 <!-- TicTacToe -->
