added intent filter for deeplink in manifest and his recpective changes in MainActivity, ClientConnectFragment and navgraph. added ProfileFragment new class and chat row image itens, profile fragment and profile fragment menu views. added new icon and two new strings for profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,8 @@
     <string name="close_server">Close Server</string>
     <string name="server_running">Server is running</string>
     <string name="server_on_ip" translatable="false">IP: %s</string>
+
+    <!-- Profile -->
+    <string name="profile">Profile</string>
+    <string name="save">Save</string>
 </resources>
