fix: ip_example string

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -49,7 +49,7 @@
     <string name="chat_members">Membros do chat</string>
     <string name="optional">*Opcional</string>
     <string name="invalid_ip">Por favor, providencie um endereço de IP valido</string>
-    <string name="ip_example">Exemplo: 192.168.x.104</string>
+    <string name="ip_example">192.168.x.104</string>
     <string name="port">Porta</string>
     <string name="tictactoe_invite">Convidar para TicTacToe</string>
     <string name="cancel">Cancelar</string>
