feat: display port in foreground notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <!-- Foreground -->
     <string name="close_server">Close Server</string>
     <string name="server_running">Server is running</string>
-    <string name="server_on_ip" translatable="false">IP: %s</string>
+    <string name="server_on_ip" translatable="false">IP: %s:%s</string>
 
     <!-- HelperText -->
     <string name="optional">*Optional</string>
