--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -21,8 +21,8 @@
     <string name="insert_message">Insira sua mensagem…</string>
     <string name="snack_server_disconnect">Conexão perdida</string>
     <string name="notification_new_message">Nova Mensagem</string>
-    <string name="joined_the_room">entrar na sala</string>
-    <string name="created_the_room">criou a sala</string>
+    <string name="joined_the_room">entrou na sala:</string>
+    <string name="created_the_room">criou a sala:</string>
     <string name="server_app_bar_name">Servidor</string>
     <string name="client_app_bar_name">Cliente</string>
     <string name="tic_tac_toe">Jogo da Velha</string>
@@ -54,4 +54,5 @@
     <string name="tictactoe_invite">Convidar para TicTacToe</string>
     <string name="cancel">Cancelar</string>
     <string name="score">Pontuação</string>
+    <string name="leaved_the_room">saiu da sala:</string>
 </resources>
