--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,11 +40,12 @@
     <string name="wrong_password">Wrong password</string>
     <string name="security_kick">Please, don\'t try to fool the server</string>
     <string name="admin_kick">You were kicked by the Administrator</string>
+    <string name="missing_id">Server coudln\'t provide an user ID</string>
 
     <!-- Adapter -->
     <string name="joined_the_room">joined the room:</string>
     <string name="created_the_room">created the room:</string>
-    <string name="leaved_the_room">leaved the room:</string>
+    <string name="left_the_room">left the room:</string>
 
     <!-- App Bar -->
     <string name="server_app_bar_name">Server</string>
